smokeping/smokeping-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smokeping
  labels:
    name: smokeping
