smokeping/smokeping-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: smokeping-svc
  namespace: smokeping
  labels:
    app: smokeping
    role: monitoring
spec:
  type: ClusterIP
  selector:
    app: smokeping
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
